prepare major release 4.0

--- a/box.json.dist
+++ b/box.json.dist
@@ -1,8 +1,11 @@
 {
     "alias": "umlwriter.phar",
-    "stub": "stub.php",
     "directories": ["bin", "src", "vendor"],
     "compression": "GZ",
+    "files": [
+        "bootstrap.php"
+    ]
+    "stub": "stub.php",
     "files-bin": [
         "console.txt",
         "manifest.txt",
