--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -13,9 +13,8 @@ on:
 
 jobs:
     deploy:
-        uses: llaville/.github/.github/workflows/gh-pages.yml@uml
+        uses: llaville/.github/.github/workflows/gh-pages.yml@master
         with:
-            php-version: "8.1"
             destination-dir: "4.0"
             hook-script: "resources/gh-pages-hook.sh"
             force-orphan: false
