--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -5,7 +5,7 @@ on:
     pull_request:
         branches:
             - master
-            - "4.1"
+            - "4.2"
         paths-ignore:
             - 'docs/**'
     workflow_call:
@@ -15,6 +15,7 @@ jobs:
         uses: llaville/.github/.github/workflows/mega-linter.yml@master
         with:
             repository: ${{ github.repository }}
+            php-version: "8.2"
 
     unit_tests:
         needs: lint_files
@@ -27,7 +28,6 @@ jobs:
                 os:
                     - ubuntu-22.04
                 php:
-                    - 8.1
                     - 8.2
                     - 8.3
                 tools:
