--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -7,18 +7,21 @@ ENABLE:
     - ACTION
     - DOCKERFILE
     - EDITORCONFIG
+    - JSON
     - MARKDOWN
     - PHP
     - YAML
 DISABLE_LINTERS:
+    - JSON_PRETTIER
+    - JSON_V8R
     - MARKDOWN_MARKDOWN_TABLE_FORMATTER
     - MARKDOWN_MARKDOWN_LINK_CHECK
     - PHP_BUILTIN
+    - PHP_PHPCSFIXER
     - PHP_PSALM
     - YAML_V8R
 DOCKERFILE_HADOLINT_ARGUMENTS: "-t error"
 EDITORCONFIG_EDITORCONFIG_CHECKER_CLI_LINT_MODE: project
-JSON_PRETTIER_FILTER_REGEX_EXCLUDE: "(composer.json)"
 MARKDOWN_MARKDOWNLINT_CONFIG_FILE: ".markdown-lint.json"
 MARKDOWN_MARKDOWNLINT_FILTER_REGEX_EXCLUDE: "(\\.github)"
 PHP_PHPSTAN_CLI_LINT_MODE: project  # to avoid https://github.com/nvuillam/mega-linter/issues/725
@@ -31,7 +34,6 @@ YAML_PRETTIER_FILTER_REGEX_EXCLUDE: "(\\.github|mkdocs\\.yml|\\.mega-linter\\.ym
 YAML_YAMLLINT_FILTER_REGEX_EXCLUDE: "(\\.github|mkdocs\\.yml)"  # As it cannot be added in .gitignore for ML actionlint linter
 CONFIG_REPORTER: false
 UPDATED_SOURCES_REPORTER: false
-# TEXT_REPORTER: true  # cannot be set to true, and should use default value (true), otherwise TAP REPORTER is also generated. See https://github.com/nvuillam/mega-linter/issues/744
 CONSOLE_REPORTER: true
 LOG_LEVEL: INFO
 PRINT_ALL_FILES: false
