--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,15 +56,18 @@ jobs:
                     COMPOSER_AUTH: '{"github-oauth": {"github.com": "${{ secrets.COMPOSER_AUTH }}"}}'
 
             -   # https://github.com/llaville/box-manifest
-                name: Build Release Artifacts
+                name: Download BOX Manifest Artifact
+                env:
+                    BOX_MANIFEST_VERSION: "4.0.0-rc.1"
                 run: |
-                    curl -Ls https://github.com/llaville/box-manifest/releases/latest/download/box-manifest.phar -o /usr/local/bin/box-manifest
+                    curl -Ls "https://github.com/llaville/box-manifest/releases/download/$BOX_MANIFEST_VERSION/box-manifest.phar" -o /usr/local/bin/box-manifest
                     chmod +x /usr/local/bin/box-manifest
-                    box-manifest manifest:build --ansi -vv -c box.json --output-file=sbom.json
-                    box-manifest manifest:build --ansi -vv -c box.json --output-file=manifest.txt --format ansi
-                    box-manifest manifest:build --ansi -vv -c box.json --output-file=console.txt --format console
-                    box-manifest manifest:stub  --ansi -vv -c box.json --output-file=stub.php --resource console.txt --resource manifest.txt --resource sbom.json
-                    box compile --ansi -vv -c box.json.dist
+
+            -   # https://github.com/llaville/box-manifest
+                name: Build Release Artifact
+                run: |
+                    box-manifest make build stub configure -r console-table.txt -r plain.txt -r sbom.json --output-stub stub.php --output-conf box.json.dist -vvv --ansi
+                    box compile -c box.json.dist -vvv --ansi
 
             -   # https://github.com/softprops/action-gh-release
                 name: Create Release from current tag
