--- a/composer.json
+++ b/composer.json
@@ -69,12 +69,6 @@
         }
     },
     "scripts": {
-        "bin": "echo 'bin not installed'",
-        "post-update-cmd": [
-            "@composer bin all update --ansi"
-        ],
-        "post-install-cmd": [
-            "@composer bin all install --ansi"
-        ]
+        "bin": "echo 'bin not installed'"
     }
 }
