--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,11 @@
         "graphp/graphviz": "1.x-dev#686f747 as 1.0.0",
         "psr/container": "^2.0",
         "roave/better-reflection": "^6.0",
-        "symfony/config": "^6.4 || ^7.0",
-        "symfony/console": "^6.4 || ^7.0",
-        "symfony/finder": "^6.4 || ^7.0",
-        "symfony/options-resolver": "^6.4 || ^7.0",
-        "symfony/yaml": "^6.4 || ^7.0"
+        "symfony/config": "^7.0",
+        "symfony/console": "^7.0",
+        "symfony/finder": "^7.0",
+        "symfony/options-resolver": "^7.0",
+        "symfony/yaml": "^7.0"
     },
     "require-dev": {
         "jawira/plantuml": "^1.2023",
