add QA tools : PHPStan accessible thru Composer scripts

--- a/composer.json
+++ b/composer.json
@@ -70,10 +70,12 @@
     },
     "scripts": {
         "bin": "echo 'bin not installed'",
+        "code:check": "vendor/bin/phpstan analyse --configuration .github/linters/phpstan.neon.dist --ansi --verbose",
         "style:check": "vendor/bin/phpcs --standard=.github/linters/.phpcs.xml.dist --warning-severity=0 --colors",
         "tests:unit": "vendor/bin/phpunit --configuration phpunit.xml.dist"
     },
     "scripts-descriptions" : {
+        "code:check": "Run PHPStan code analysis on project source code",
         "style:check": "Run PHP CodeSniffer on project source code",
         "tests:unit": "Run unit tests on project source code"
     }
