upgrade Unit Tests workflow : bumping GH actions to next major version to avoid Node 16 deprecations, and use local Composer PHPUnit 10 installation

--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -30,8 +30,6 @@ jobs:
                 php:
                     - 8.2
                     - 8.3
-                tools:
-                    - phpunit:10.5
 
         name: UML Class Writer
 
@@ -46,14 +44,13 @@ jobs:
                 with:
                     php-version: ${{ matrix.php }}
                     coverage: "none"
-                    tools: ${{ matrix.tools }}
 
             -   # https://github.com/ramsey/composer-install
                 name: Install Composer dependencies
-                uses: ramsey/composer-install@v2
+                uses: ramsey/composer-install@v3
                 with:
                     composer-options: "--prefer-dist"
 
             -   # https://github.com/sebastianbergmann/phpunit/tree/10.5
                 name: Unit tests with PHPUnit 10
-                run: phpunit --testdox --do-not-cache-result --no-progress
+                run: vendor/bin/phpunit --testdox --do-not-cache-result --no-progress
