reformat/indent EditorConfig-Checker config file

--- a/.github/linters/.editorconfig-checker.json
+++ b/.github/linters/.editorconfig-checker.json
@@ -1,18 +1,29 @@
 {
-  "Verbose": false,
-  "Debug": false,
-  "IgnoreDefaults": false,
-  "SpacesAfterTabs": false,
-  "NoColor": false,
-  "Exclude": ["\\.idea", "\\.editorconfig", "\\.github", "vendor", "LICENSE", "mkdocs\\.yml", "**/*\\.gv", "**/*\\.puml", "\\.changes"],
-  "AllowedContentTypes": [],
-  "PassedFiles": [],
-  "Disable": {
-    "EndOfLine": false,
-    "Indentation": false,
-    "InsertFinalNewline": false,
-    "TrimTrailingWhitespace": false,
-    "IndentSize": false,
-    "MaxLineLength": false
-  }
+    "Verbose": false,
+    "Debug": false,
+    "IgnoreDefaults": false,
+    "SpacesAfterTabs": false,
+    "NoColor": false,
+    "Exclude": [
+        "\\.idea",
+        "\\.editorconfig",
+        "\\.github",
+        "vendor",
+        "LICENSE",
+        "mkdocs\\.yml",
+        "**/*\\.gv",
+        "**/*\\.svg",
+        "**/*\\.puml",
+        "\\.changes"
+    ],
+    "AllowedContentTypes": [],
+    "PassedFiles": [],
+    "Disable": {
+        "EndOfLine": false,
+        "Indentation": false,
+        "InsertFinalNewline": false,
+        "TrimTrailingWhitespace": false,
+        "IndentSize": false,
+        "MaxLineLength": false
+    }
 }
