fix some editorconfig-checker issues

--- a/.github/linters/.editorconfig-checker.json
+++ b/.github/linters/.editorconfig-checker.json
@@ -5,16 +5,21 @@
     "SpacesAfterTabs": false,
     "NoColor": false,
     "Exclude": [
-        "\\.idea",
-        "\\.editorconfig",
-        "\\.github",
+        "\\.idea$",
+        "\\.config$",
+        "\\.github$",
         "vendor",
+        "vendor-bin",
         "LICENSE",
-        "mkdocs\\.yml",
-        "**/*\\.gv",
-        "**/*\\.svg",
-        "**/*\\.puml",
-        "\\.changes"
+        "mkdocs\\.yml$",
+        "examples",
+        "tests/fixtures",
+        "sbom\\.json$",
+        "\\.gv$",
+        "\\.puml$",
+        "\\.svg$",
+        "\\.changie\\.yaml$",
+        "\\.changes$"
     ],
     "AllowedContentTypes": [],
     "PassedFiles": [],
