--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 ---
 site_name: UMLWriter
-site_url: https://llaville.github.io/umlwriter
+site_url: https://llaville.github.io/umlwriter/4.3
 repo_url: https://github.com/llaville/umlwriter # https://squidfunk.github.io/mkdocs-material/setup/adding-a-git-repository/#repository
 site_author: Laurent Laville
 edit_uri: "" # hide edit button -- https://squidfunk.github.io/mkdocs-material/setup/adding-a-git-repository/#edit-button
