do not forward command to let a chance to install dev tool on demand

--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,7 @@
         "bamarni-bin": {
             "bin-links": true,
             "target-directory": "vendor-bin",
-            "forward-command": true
+            "forward-command": false
         }
     },
     "scripts": {
