fix PHAR target of GH release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ on:
             box-output:
                 description: "Path to the PHP Archive made by the BOX"
                 required: true
-                default: "umlwriter.phar"
+                default: "bin/umlwriter.phar"
                 type: string
             box-manifest-version:
                 # https://github.com/llaville/box-manifest
